syntax = "proto3";

package merkledb;

option java_package = "com.swirlds.merkledb.files";
option java_multiple_files = true;

message DataFile {

    // File metadata
    DataFileMetadata metadata = 1;

    // Data items
    repeated bytes items = 11;
}

message DataFileMetadata {

    // File index in its file collection
    optional uint32 index = 1;

    // Creation timestamp, seconds
    uint64 creationDateSeconds = 2;

    // Creation timestamp, nanos
    uint32 creationDateNanos = 3;

    // Items count
    fixed64 itemsCount = 4;

    // Data item version. May not be needed
    optional uint64 itemVersion = 5;

    // Compaction level. Always less or equal to 127
    optional uint32 compactionLevel = 6;
}
